# agentless-monitoring

./: .cursorignore  .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  TODO.md  config.json.example  docker-compose.yml  main.py  manage.py  manage.sh  mix.exs
.github/workflows/: ci.yml  release.yml
config/: config.exs  runtime.exs
lib/: agentless_monitor.ex
lib/agentless_monitor/: application.ex  config.ex  models.ex  state.ex
lib/agentless_monitor/api/: handlers.ex  router.ex
lib/agentless_monitor/monitoring/: parser.ex  service.ex
lib/agentless_monitor/ssh/: connection.ex  manager.ex
monitor/: ssh_handler.py  views.py
monitor/templates/: monitor.html
scripts/: release.sh
server_monitor/: asgi.py  settings.py  urls.py  wsgi.py
src/: cli.rs  config.rs  main.rs  models.rs  monitoring.rs  ssh.rs
src/api/: servers.rs
static/css/: style.css
static/js/: app.js
templates/: index.html
